
apt stuff should work now.
----------------------------------------------------------------------
Wed Jul 10 16:26:39 2002                        Michael Jennings (mej)

Still working on apt stuff. :(
----------------------------------------------------------------------
Tue Jul 16 12:59:29 2002                        Michael Jennings (mej)

Sign the hash file.
----------------------------------------------------------------------
Wed Jul 31 11:23:20 2002                        Michael Jennings (mej)

Debian package updates.
----------------------------------------------------------------------
Tue Sep 17 18:08:17 2002                        Michael Jennings (mej)

Gotta watch that filename quoting with RPM's....
----------------------------------------------------------------------
Sun Sep 22 16:05:11 2002                        Michael Jennings (mej)

Fixes for spec file handling in merges/imports of SRPM's.
----------------------------------------------------------------------
Thu Apr 10 15:07:54 2003                        Michael Jennings (mej)

Fixes to spec file handling.
----------------------------------------------------------------------
Mon May 12 11:05:07 2003                        Michael Jennings (mej)

Fixed retry algorithm.
----------------------------------------------------------------------
Mon Jun  2 14:15:55 2003                        Michael Jennings (mej)

Don't bitch about symlinks that are already there.
----------------------------------------------------------------------
Mon Jun  2 14:17:26 2003                        Michael Jennings (mej)

Make sure apt is present and working, and remove old symlinks rather
than failing.
----------------------------------------------------------------------
Mon Jun  2 12:30:45 2003                        Michael Jennings (mej)

Don't commit right away, just add/remove stuff.
----------------------------------------------------------------------