@@ -1,7 +1,7 @@
 Summary: Mezzanine -- A Software Product Management System
 Name: mezzanine
 Version: 1.5
-Release: 0.9
+Release: 0.10
 Copyright: BSD
 Group: Development/Tools
 Source: %{name}.tar.gz
@@ -58,7 +58,7 @@ done
 
 (
   cd $RPM_BUILD_ROOT%{_bindir}
-  for i in get co put ci info add new rm purge rtag tag reset login diff stat status log ; do
+  for i in get co put ci info add new rm purge rtag tag reset login ann annotate blame diff stat status log ; do
     ln -s revtool mz$i
     echo ".so revtool.1" > $RPM_BUILD_ROOT%{_mandir}/man1/mz$i.1
   done
